[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "security-overview"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["httpx", "trio"]

[project.optional-dependencies]
dev = ["pytest", "pytest-trio", "respx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["security_overview*"]
